# thunderbot

./: .gitignore  Cargo.toml  README.md
migrations/: 20230804130950_init_db.sql  20230804205546_add_data.sql
src/: ai.rs  auth.rs  components.rs  db.rs  discord.rs  lib.rs  main.rs  message.rs  web.rs
templates/: 401.html  403.html  index.html  modify-rule-form.html  new-rule-form.html  pattern-input.html  response-input.html  rule-row.html  rules-table.html
