[package]
name = "thunderbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chat-gpt-lib-rs = "0.2.1"
dashmap = "5.4"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4"
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tera = "1"
thiserror = "1.0.44"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = "2.3.1"
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
