[package]
name = "thunderbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chat-gpt-lib-rs = "0.2.1"
dashmap = "5.5.3"
futures = "0.3"
# hyper = { version = "0.14", features = ["full"] }
hypersynthetic = { version = "0.3.0", features = ["rocket"] }
lazy_static = "1.4"
rand = "0.8.5"
rocket = "0.5.0-rc.3"
serde = "1.0"
serenity = { version = "0.11", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.50"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = "2.3.1"
uuid = { version = "1.5", features = ["v4", "fast-rng", "macro-diagnostics"] }
